# hub-vWWh

./: 作业1_GRU文本分类.py  作业1_LSTM文本分类.py  作业2_四个模型的优缺点.md
pengwenxian/week10/: work02.ipynb  (+1 more)
week16/: main.py  pyproject.toml  readme.txt
week16/ai_werewolf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
week16/app/: models.py
week16/app/agents/: base.py  human_proxy.py  llm_agent.py  registry.py
week16/app/agents/scripted/: basic.py
week16/app/api/: routes_matches.py  routes_players.py  routes_replay.py
week16/app/core/: config.py  exceptions.py  logging.py
week16/app/engine/: enums.py  models.py  resolver.py  rules.py  validator.py  visibility.py  win_conditions.py
week16/app/observability/: event_logger.py  event_schemas.py  trace_redaction.py
week16/app/services/: match_service.py  prompt_builder.py  replay_service.py  simulation_service.py  turn_runner.py
week16/app/storage/: jsonl_store.py  repositories.py  sqlite.py
week16/configs/: config.yaml
week16/data/: werewolf.db
week16/data/matches/1097c431-8a87-4799-a30a-d14ec608d8b2/: events.jsonl
week16/data/matches/189c18c5-6b72-4d51-9f1b-492672b5ccb9/: events.jsonl
week16/data/matches/237a2a73-9134-4c32-97bb-701d75002e23/: events.jsonl
week16/data/matches/24eb882d-fc06-4262-8b7b-c0d7bd2079a5/: events.jsonl
week16/data/matches/340c2bc8-23d0-413f-875a-9d9b7d59c3b6/: events.jsonl
week16/data/matches/3f5a6aab-fdd8-4f86-b9f9-765b283247a6/: events.jsonl
week16/data/matches/412eb41a-fa50-42f7-b40c-5a9ed0b891f5/: events.jsonl
week16/data/matches/488b77db-b2ba-42e4-8356-8fced2935c9e/: events.jsonl
week16/frontend/: index.html
(+438 files in other folders)
