[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Multimodal RAG system with Qwen3 + Qwen-VL + DashScope"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "dashscope>=1.20.0",
    "qdrant-client>=1.12.0",
    "llama-index>=0.11.0",
    "python-multipart>=0.0.12",
    "python-docx>=1.1.2",
    "pdfplumber>=0.11.0",
    "Pillow>=10.4.0",
    "python-dotenv>=1.0.1",
    "sse-starlette>=2.1.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "aiofiles>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
